Added a main for testing, it plays!